[package]
name = "df"
version = "0.1.0"
edition = "2021"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    # "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

df-client = { git = "https://github.com/zmtq05/df-rs" }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "parking_lot"] }
egui_extras = { version = "0.22.0", features = ["image"] }
image = { version = "0.24", features = ["png"] }
thousands = "0.2.0"
egui-phosphor = "0.1.1"

[dependencies.poll-promise]
# 0.2 version has bug in release build
# https://github.com/EmbarkStudios/poll-promise/issues/18
git = "https://github.com/EmbarkStudios/poll-promise"
rev = "refs/pull/14/head"
features = ["tokio"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# # web:
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6"
# tracing-wasm = "0.2"
# wasm-bindgen-futures = "0.4"


# [profile.release]
# opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
