[package]
name = "df"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = ["glow"] }
serde = { version = "1", features = ["derive"] }
df-rs = { git = "https://github.com/zmtq05/df-rs" }
egui_extras = { version = "0.22.0", features = ["image"] }
image = { version = "0.24", features = ["png"] }
thousands = "0.2.0"
egui-phosphor = "0.1.1"
tracing-subscriber = "0.3"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "parking_lot"] }

[dependencies.poll-promise]
git = "https://github.com/EmbarkStudios/poll-promise"
rev = "refs/pull/14/head"
features = ["tokio"]
